lander.lessons.lander.lvl1_lander_101.Lander101.scala.code
if (getY < 400) {
	setPoussee
}
